[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "policy_validator"
version = "0.1.10"
description = "Vault policy validation tool with priority rules, lints, and Streamlit UI."
authors = [
    { name = "George Politis" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["."]
